[gd_scene load_steps=8 format=3 uid="uid://bqxvh8yqxqxqx"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_0"]
[ext_resource type="Script" path="res://scripts/powerup.gd" id="2_0"]
[ext_resource type="Script" path="res://scripts/goal.gd" id="3_0"]
[ext_resource type="Script" path="res://scripts/ui_manager.gd" id="4_0"]
[ext_resource type="Script" path="res://scripts/level_manager.gd" id="5_0"]
[ext_resource type="Script" path="res://scripts/save_system.gd" id="6_0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4"]
size = Vector2(128, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5"]
size = Vector2(64, 64)

[node name="DemoLevel" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIManager" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4_0")

[node name="HealthLabel" type="Label" parent="UI/UIManager"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
text = "Health: 3/3"
label_settings = SubResource("LabelSettings_1")

[node name="PowerupLabel" type="Label" parent="UI/UIManager"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 300.0
offset_bottom = 90.0
text = ""
visible = false

[node name="LevelManager" type="Node" parent="."]
script = ExtResource("5_0")

[node name="SaveSystem" type="Node" parent="."]
script = ExtResource("6_0")

[node name="Platforms" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="Platforms"]
position = Vector2(640, 680)
script = ExtResource("7_0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Ground"]
shape = SubResource("RectangleShape2D_4")

[node name="Platform1" type="StaticBody2D" parent="Platforms"]
position = Vector2(400, 500)
script = ExtResource("7_0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform1"]
shape = SubResource("RectangleShape2D_1")

[node name="Platform2" type="StaticBody2D" parent="Platforms"]
position = Vector2(800, 400)
script = ExtResource("7_0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms/Platform2"]
shape = SubResource("RectangleShape2D_1")

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy1" type="CharacterBody2D" parent="Enemies"]
position = Vector2(400, 450)
script = ExtResource("1_0")

[node name="Sprite2D" type="Sprite2D" parent="Enemies/Enemy1"]
modulate = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemies/Enemy1"]
shape = SubResource("RectangleShape2D_2")

[node name="DetectionArea" type="Area2D" parent="Enemies/Enemy1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemies/Enemy1/DetectionArea"]
shape = SubResource("RectangleShape2D_3")

[node name="Hitbox" type="Area2D" parent="Enemies/Enemy1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemies/Enemy1/Hitbox"]
shape = SubResource("RectangleShape2D_2")

[node name="Powerups" type="Node2D" parent="."]

[node name="HealthPowerup" type="Area2D" parent="Powerups"]
position = Vector2(400, 450)
script = ExtResource("2_0")
powerup_type = 0

[node name="Sprite2D" type="Sprite2D" parent="Powerups/HealthPowerup"]
modulate = Color(0, 1, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Powerups/HealthPowerup"]
shape = SubResource("RectangleShape2D_2")

[node name="SpeedPowerup" type="Area2D" parent="Powerups"]
position = Vector2(800, 350)
script = ExtResource("2_0")
powerup_type = 1

[node name="Sprite2D" type="Sprite2D" parent="Powerups/SpeedPowerup"]
modulate = Color(0, 0, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Powerups/SpeedPowerup"]
shape = SubResource("RectangleShape2D_2")

[node name="Goal" type="Area2D" parent="."]
position = Vector2(1200, 600)
script = ExtResource("3_0")
level_number = 1

[node name="Sprite2D" type="Sprite2D" parent="Goal"]
modulate = Color(0, 1, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
shape = SubResource("RectangleShape2D_5")

[connection signal="body_entered" from="Enemies/Enemy1/DetectionArea" to="Enemies/Enemy1" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Enemies/Enemy1/DetectionArea" to="Enemies/Enemy1" method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Enemies/Enemy1/Hitbox" to="Enemies/Enemy1" method="_on_hitbox_body_entered"]